--- a/cmvec.sty
+++ b/cmvec.sty
@@ -1,10 +1,23 @@
-% Requires:
-%   \usepackage{etoolbox}
-%   \usepackage{mathtools}
-%   \usepackage{xkeyval}
+\NeedsTeXFormat{LaTeX2e}[1994/06/01]
+\ProvidesPackage{cmvec}[2014/10/17 cmvec]
 
-\DeclareMathOperator*{\argmin}{argmin}
-\DeclareMathOperator*{\argmax}{argmax}
+\RequirePackage{etoolbox}
+\RequirePackage{amsfonts}
+\RequirePackage{amssymb}
+\RequirePackage{mathtools}
+\RequirePackage{xkeyval}
+
+\ifcsname argmin\endcsname%
+  \relax
+\else%
+  \DeclareMathOperator*{\argmin}{argmin}
+\fi%
+
+\ifcsname argmax\endcsname%
+  \relax
+\else%
+  \DeclareMathOperator*{\argmax}{argmax}
+\fi%
 
 % Useful for seeing how TeX does its spacing and alignment.
 \newcommand{\texbox}[1]{{\setlength{\fboxsep}{0pt}\fbox{#1}}}
@@ -16,18 +29,22 @@
 % \def\llap#1{\hbox to 0pt{\hss#1}}
 % \def\rlap#1{\hbox to 0pt{#1\hss}}
 %
-% Not needed if you use \usepackage{mathtools}.
+% These are provided by mathtools
 %
-\def\clap#1{\hbox to 0pt{\hss#1\hss}}
-\def\mathllap{\mathpalette\mathllapinternal}
-\def\mathrlap{\mathpalette\mathrlapinternal}
-\def\mathclap{\mathpalette\mathclapinternal}
-\def\mathllapinternal#1#2{%
-\llap{$\mathsurround=0pt#1{#2}$}}
-\def\mathrlapinternal#1#2{%
-\rlap{$\mathsurround=0pt#1{#2}$}}
-\def\mathclapinternal#1#2{%
-\clap{$\mathsurround=0pt#1{#2}$}}
+\ifcsname mathclap\endcsname
+  \relax
+\else
+  \def\clap#1{\hbox to 0pt{\hss#1\hss}}
+  \def\mathllap{\mathpalette\mathllapinternal}
+  \def\mathrlap{\mathpalette\mathrlapinternal}
+  \def\mathclap{\mathpalette\mathclapinternal}
+  \def\mathllapinternal#1#2{%
+  \llap{$\mathsurround=0pt#1{#2}$}}
+  \def\mathrlapinternal#1#2{%
+  \rlap{$\mathsurround=0pt#1{#2}$}}
+  \def\mathclapinternal#1#2{%
+  \clap{$\mathsurround=0pt#1{#2}$}}
+\fi
 
 
 % Usage:  \phantomword[c]{hiddenmath}{shownmath}
@@ -51,10 +68,6 @@
     \hbox{\hb@xt@\@tempdima{\csname bm@#1\endcsname}}%
   \@end@tempboxa}
 \MHInternalSyntaxOff
-
-
-
-
 
 \makeatletter
 \newlength\CMlength
@@ -94,8 +107,6 @@
 \newcommand{\CMlharpoon}[1]{\CMvector[symbol=\leftharpoonup,pre=\scriptscriptstyle]{#1}}
 \newcommand{\CMrharpoon}[1]{\CMvector[symbol=\rightharpoonup,pre=\scriptscriptstyle]{#1}}
 \newcommand{\CMlrharpoon}[1]{\CMvector[symbol=\leftrightharpoonup,pre=\scriptscriptstyle]{#1}}
-
-
 
 
 \makeatletter
@@ -191,3 +202,4 @@
 }
 
 \makeatother
+\endinput
