--- a/cmvec.tex
+++ b/cmvec.tex
@@ -8,7 +8,7 @@
 \usepackage{microtype}
 
 \usepackage{tikz}
-\usetikzlibrary{arrows}
+%\usetikzlibrary{arrows}
 \usetikzlibrary{arrows.meta}
 
 \usepackage{cmvec}
